--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -1,31 +1,184 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title>Ohmyfood - Le délice des Sens</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../sass/index.css">
-        <script src="https://kit.fontawesome.com/3f75339eca.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header class="menu-header">
-            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <img class="header-logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-        </header>
-        <main class="restaurant">
-            <div class="photo">
-                <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Une assiette au Délice des sens" title="Une assiette au Délice des sens">
-            </div>
-            <div class="main-course">
-                <div class="restaurant-info">
-                    <h1>Le délice des sens</h1>
-                    <div class="card-rate">
-                        <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ohmyfood - Le délice des Sens</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,700&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../sass/index.css" />
+    <script
+      src="https://kit.fontawesome.com/3f75339eca.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="menu-header">
+      <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+      <img
+        class="header-logo"
+        src="../assets/images/logo/ohmyfood@2x.svg"
+        alt="Logo Ohmyfood"
+      />
+    </header>
+    <main class="restaurant">
+      <div class="photo">
+        <img
+          src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          alt="Une assiette au Délice des sens"
+          title="Une assiette au Délice des sens"
+        />
+      </div>
+      <div class="main-course">
+        <div class="restaurant-info">
+          <h1>Le délice des sens</h1>
+          <div class="card-rate">
+            <button>
+              <i class="fa-regular fa-heart"></i
+              ><i class="fa-solid fa-heart"></i>
+            </button>
+          </div>
+        </div>
+        <div class="navtab">
+          <!--    <div class="navigation"> -->
+          <button class="chevron left">
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
+          <!--      </div> -->
+          <div class="menu-container">
+            <div class="menu__container--extend">
+              <div class="restaurant-menu">
+                <h2>Entrées</h2>
+                <div class="style-bar"></div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Tartare de thon</h3>
+                      <p>Assaisonné au Yuzu</p>
                     </div>
+                    <div class="choice-price">25€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
                 </div>
-                <div class="menu-container">
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Bouchée de homard croustillant</h3>
+                      <p>Et sa farandole de petits légumes</p>
+                    </div>
+                    <div class="choice-price">35€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Velouté de cèpes</h3>
+                      <p>Aux truffes</p>
+                    </div>
+                    <div class="choice-price">20€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="restaurant-menu">
+                <h2>Plats</h2>
+                <div class="style-bar"></div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Poulet rôti aux herbes de Provence</h3>
+                      <p>Et sa crème de truffe</p>
+                    </div>
+                    <div class="choice-price">40€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Langouste rôtie</h3>
+                      <p>Et ses légumes de saison</p>
+                    </div>
+                    <div class="choice-price">35€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Côte de bœuf Angus</h3>
+                      <p>Et sa purée de panais</p>
+                    </div>
+                    <div class="choice-price">44€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="restaurant-menu">
+                <h2>Desserts</h2>
+                <div class="style-bar"></div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Farandole de desserts</h3>
+                      <p>Du chef</p>
+                    </div>
+                    <div class="choice-price">18€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Crème brulée</h3>
+                      <p>Revisitée</p>
+                    </div>
+                    <div class="choice-price">22€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-choice">
+                  <div class="card-choice-extend">
+                    <div class="choice-text">
+                      <h3>Tiramisu</h3>
+                      <p>À la noisette</p>
+                    </div>
+                    <div class="choice-price">23€</div>
+                    <div class="selected">
+                      <i class="fa-solid fa-check"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="chevron right">
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+        </div>
+        <a href="#"><button class="button-fantasy">Commander</button></a>
+
+        <!--           <div class="menu-container">
                     <div class="restaurant-menu">
                         <h2>Entrées</h2>
                         <div class="style-bar"></div>
@@ -137,19 +290,23 @@
                         </div>
                     </div>
                     <a href="#"><button class="button-fantasy">Commander</button></a>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <div class="info">
-                <h1>ohmyfood</h1>
-                <div class="info--contact">
-                    <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
-                    <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
-                    <a href="#">Mentions légales</a>
-                    <a href="#">Contact</a>
-                </div>
-            </div>
-        </footer>
-    </body>
+                </div>  -->
+      </div>
+    </main>
+    <footer>
+      <div class="info">
+        <h1>ohmyfood</h1>
+        <div class="info--contact">
+          <a href="#"
+            ><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a
+          >
+          <a href="#"
+            ><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a
+          >
+          <a href="#">Mentions légales</a>
+          <a href="#">Contact</a>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
