BEM et Tablette
2 propositions pour le mode tablette, mais des difficultés à faire fonctionner les boutons. A voir avec Cedric

Convention BEM appliquée sur la page menu

--- a/restaurants/delice des sens test.html
+++ b/restaurants/delice des sens test.html
@@ -43,11 +43,17 @@
           </div>
         </div>
         <div class="nav--tab">
-          <!--    <div class="navigation"> -->
-          <button class="chevron left">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <!--      </div> -->
+          <div class="navigation">
+            <button class="recipes_button entries">
+              <h2>Entrées</h2>
+            </button>
+            <button class="recipes_button maincourse">
+              <h2>Plats</h2>
+            </button>
+            <button class="recipes_button desserts">
+              <h2>Desserts</h2>
+            </button>
+          </div>
           <div class="menu__container">
             <div class="menu__container--extend">
               <div class="recipes">
@@ -172,125 +178,8 @@
               </div>
             </div>
           </div>
-          <button class="chevron right">
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
         </div>
         <a href="#"><button class="button__gradient">Commander</button></a>
-
-        <!--           <div class="menu__container">
-                    <div class="recipes">
-                        <h2>Entrées</h2>
-                        <div class="recipes__stylebar"></div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Tartare de thon</h3>
-                                    <p>Assaisonné au Yuzu</p>
-                                </div>
-                                <div class="recipes__price">25€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Bouchée de homard croustillant </h3>
-                                    <p>Et sa farandole de petits légumes</p>
-                                </div>
-                                <div class="recipes__price">35€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Velouté de cèpes</h3>
-                                    <p>Aux truffes</p>
-                                </div>
-                                <div class="recipes__price">20€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="recipes">
-                        <h2>Plats</h2>
-                        <div class="recipes__stylebar"></div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Poulet rôti aux herbes de Provence </h3>
-                                    <p>Et sa crème de truffe</p>
-                                </div>
-                                <div class="recipes__price">40€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Langouste rôtie</h3>
-                                    <p>Et ses légumes de saison</p>
-                                </div>
-                                <div class="recipes__price">35€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Côte de bœuf Angus </h3>
-                                    <p>Et sa purée de panais</p>
-                                </div>
-                                <div class="recipes__price">44€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="recipes">
-                        <h2>Desserts</h2>
-                        <div class="recipes__stylebar"></div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Farandole de desserts</h3>
-                                    <p>Du chef</p>
-                                </div>
-                                <div class="recipes__price">18€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Crème brulée</h3>
-                                    <p>Revisitée</p>
-                                </div>
-                                <div class="recipes__price">22€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="recipes__choice">
-                            <div class="recipes__choice--extend">
-                                <div class="recipes__text">
-                                    <h3>Tiramisu</h3>
-                                    <p>À la noisette</p>
-                                </div>
-                                <div class="recipes__price">23€</div>
-                                <div class="recipes__selected"><i class="fa-solid fa-check"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#"><button class="button__gradient">Commander</button></a>
-                </div>  -->
       </div>
     </main>
     <footer>
