--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img class="header-logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+        <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
         <div class="header-location">
             <i class="fa-solid fa-location-dot"></i>
             <input type="text" name="location" id="city" placeholder="Paris, Belleville"></input>
@@ -25,7 +25,7 @@
         <section class="section-bgd">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <a href="#restaurants"><button class="button-fantasy">Explorer nos restaurants</button></a>
+            <a href="#restaurants"><button class="button__gradient">Explorer nos restaurants</button></a>
         </section>
         <section>
             <h1>Fonctionnement</h1>
@@ -58,7 +58,7 @@
             <div class="restaurant-list">
                 <a href="restaurants/menu_palette_du_gout.html">
                     <article class="restaurant-card">
-                        <div class="photo">
+                        <div class="restaurant__photo">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="Une table à La palette du goût" title="Une table à La palette du goût">
                             <button class="button-new">Nouveau</button>
@@ -68,7 +68,7 @@
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
-                            <div class="card-rate">
+                            <div class="restaurant__rate">
                                 <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                 </a>
                 <a href="restaurants/menu_note_enchantee.html">
                     <article class="restaurant-card">
-                        <div class="photo">
+                        <div class="restaurant__photo">
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                 alt="Une table à La note enchantée" title="Une table à La note enchantée">
                             <button class="button-new">Nouveau</button>
@@ -86,7 +86,7 @@
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
-                            <div class="card-rate">
+                            <div class="restaurant__rate">
                                 <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                 </a>
                 <a href="restaurants/menu_la_francaise.html">
                     <article class="restaurant-card">
-                        <div class="photo">
+                        <div class="restaurant__photo">
                             <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                 alt="Une table à la Française" title="Une table à la Française">
                         </div>
@@ -103,7 +103,7 @@
                                 <h3>A la Française</h3>
                                 <p>Cité Rouge</p>
                             </div>
-                            <div class="card-rate">
+                            <div class="restaurant__rate">
                                 <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
                 </a>
                 <a href="restaurants/menu_delice_des_sens.html">
                     <article class="restaurant-card">
-                        <div class="photo">
+                        <div class="restaurant__photo">
                             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="Une table au délice des sens" title="Une table au délice des sens">
                         </div>
@@ -120,7 +120,7 @@
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
-                            <div class="card-rate">
+                            <div class="restaurant__rate">
                                 <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
     <footer>
         <div class="info">
             <h1>ohmyfood</h1>
-            <div class="info--contact">
+            <div class="info__contact">
                 <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a>
                 <a href="#">Mentions légales</a>
