--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <header>
         <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-        <div class="header-location">
+        <div class="header__location">
             <i class="fa-solid fa-location-dot"></i>
             <input type="text" name="location" id="city" placeholder="Paris, Belleville"></input>
         </div>
     </header>
-    <main class="main-container">
-        <section class="section-bgd">
+    <main class="main__container">
+        <section class="section__bgd">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <a href="#restaurants"><button class="button__gradient">Explorer nos restaurants</button></a>
@@ -30,22 +30,22 @@
         <section>
             <h1>Fonctionnement</h1>
             <div class="howto">
-                <div class="use-card">
-                    <p class="number-box">1</p>
+                <div class="howto__card">
+                    <p class="howto__card-number">1</p>
                     <div>
                         <p><i class="fa-solid fa-mobile-screen-button"></i></p>
                         <h4>Choisissez un restaurant</h4>
                     </div>
                 </div>
-                <div class="use-card">
-                    <p class="number-box">2</p>
+                <div class="howto__card">
+                    <p class="howto__card-number">2</p>
                     <div>
                         <p><i class="fa-solid fa-list-ul"></i></p>
                         <h4>Composez votre menu</h4>
                     </div>
                 </div>
-                <div class="use-card">
-                    <p class="number-box">3</p>
+                <div class="howto__card">
+                    <p class="howto__card-number">3</p>
                     <div>
                         <p><i class="fa-solid fa-store"></i></p>
                         <h4>Dégustez au restaurant</h4>
@@ -53,18 +53,18 @@
                 </div>
             </div>
         </section>
-        <section id="restaurants" class="section-bgd">
+        <section id="restaurants" class="section__bgd">
             <h1>Restaurants</h1>
-            <div class="restaurant-list">
+            <div class="restaurant__list">
                 <a href="restaurants/menu_palette_du_gout.html">
-                    <article class="restaurant-card">
+                    <article class="restaurant__card">
                         <div class="restaurant__photo">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="Une table à La palette du goût" title="Une table à La palette du goût">
-                            <button class="button-new">Nouveau</button>
+                            <button class="button__new">Nouveau</button>
                         </div>
-                        <div class="card-content">
-                            <div class="card-txt">
+                        <div class="restaurant__card-content">
+                            <div >
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
@@ -75,14 +75,14 @@
                     </article>
                 </a>
                 <a href="restaurants/menu_note_enchantee.html">
-                    <article class="restaurant-card">
+                    <article class="restaurant__card">
                         <div class="restaurant__photo">
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                 alt="Une table à La note enchantée" title="Une table à La note enchantée">
-                            <button class="button-new">Nouveau</button>
+                            <button class="button__new">Nouveau</button>
                         </div>
-                        <div class="card-content">
-                            <div class="card-txt">
+                        <div class="restaurant__card-content">
+                            <div >
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
@@ -93,13 +93,13 @@
                     </article>
                 </a>
                 <a href="restaurants/menu_la_francaise.html">
-                    <article class="restaurant-card">
+                    <article class="restaurant__card">
                         <div class="restaurant__photo">
                             <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                                 alt="Une table à la Française" title="Une table à la Française">
                         </div>
-                        <div class="card-content">
-                            <div class="card-txt">
+                        <div class="restaurant__card-content">
+                            <div >
                                 <h3>A la Française</h3>
                                 <p>Cité Rouge</p>
                             </div>
@@ -110,13 +110,13 @@
                     </article>
                 </a>
                 <a href="restaurants/menu_delice_des_sens.html">
-                    <article class="restaurant-card">
+                    <article class="restaurant__card">
                         <div class="restaurant__photo">
                             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                                 alt="Une table au délice des sens" title="Une table au délice des sens">
                         </div>
-                        <div class="card-content">
-                            <div class="card-txt">
+                        <div class="restaurant__card-content">
+                            <div >
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
