--- a/restaurants/loader-test.html
+++ b/restaurants/loader-test.html
@@ -13,14 +13,9 @@
 
 <div class="loader">
     <img class="logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-    <div class="table">   
-        <div class="icon fork"><img src="/assets/images/loader/fork.png" alt=""></div>
-        <div class="plate">
-            <div class="ring"></div>
-            <div class="center"></div>
-            <div class="circle"></div>
-        </div>          
-        <div class="icon knife"><img src="/assets/images/loader/knife.png" alt=""></div>
+    <div class="table">
+        <img src="/assets/images/loader/table-mini.png" alt="couverts">   
+        <div class="plate"></div>          
     </div>    
 </div>   
 
