--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img class="logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+        <div class="table">
+            <img src="/assets/images/loader/table-mini.png" alt="couverts">   
+            <div class="plate"></div>          
+        </div>    
+    </div>   
     <header>
         <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
         <div class="header__location">
