--- a/restaurants/loader-test.html
+++ b/restaurants/loader-test.html
@@ -11,13 +11,26 @@
     </head>
     <body>
 
+
+
 <div class="loader">
-    <img class="logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+    <img class="logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+    <div class="table2">
+        <img class="fork" src="../assets/images/loader/fork.png" alt="fourchette">
+        <div class="plate"></div>     
+        <img class="knife" src="../assets/images/loader/knife.png" alt="couteau">     
+    </div>    
+</div>
+
+
+<!--
+<div class="loader">
+    <img class="logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
     <div class="table">
-        <img src="/assets/images/loader/table-mini.png" alt="couverts">   
+        <img src="../assets/images/loader/table-mini.png" alt="couverts">   
         <div class="plate"></div>          
     </div>    
-</div>   
+</div>   -->
 
     </body>
 </html>
