--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -36,10 +36,10 @@
         <div class="restaurant__info">
           <h1>La palette du goût</h1>
           <div class="restaurant__rate">
-            <button>
+            <span>
               <i class="fa-regular fa-heart"></i
               ><i class="fa-solid fa-heart"></i>
-            </button>
+            </span>
           </div>
         </div>
         <div class="nav--tab">
