--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
 
 <body>
     <div class="loader">
-        <img class="logo" src="/assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
-        <div class="table">
-            <img src="/assets/images/loader/table-mini.png" alt="couverts">   
-            <div class="plate"></div>          
+        <img class="logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
+        <div class="table2">
+            <img class="fork" src="assets/images/loader/fork.png" alt="fourchette">
+            <div class="plate"></div>     
+            <img class="knife" src="assets/images/loader/knife.png" alt="couteau">     
         </div>    
-    </div>   
+    </div>
     <header>
         <img class="header__logo" src="assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood">
         <div class="header__location">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text" name="location" id="city" placeholder="Paris, Belleville"></input>
+            <input type="text" name="location" id="city" placeholder="Paris, Belleville">
         </div>
     </header>
     <main class="main__container">
         <section class="section__bgd">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <a href="#restaurants"><button class="button__gradient">Explorer nos restaurants</button></a>
+            <a href="#restaurants" class="button__gradient">Explorer nos restaurants</a>
         </section>
         <section>
             <h1>Fonctionnement</h1>
@@ -68,7 +69,7 @@
                         <div class="restaurant__photo">
                             <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                                 alt="Une table à La palette du goût" title="Une table à La palette du goût">
-                            <button class="button__new">Nouveau</button>
+                            <div class="button__new">Nouveau</div>
                         </div>
                         <div class="restaurant__card-content">
                             <div >
@@ -76,7 +77,7 @@
                                 <p>Ménilmontant</p>
                             </div>
                             <div class="restaurant__rate">
-                                <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                <span><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></span>
                             </div>
                         </div>
                     </article>
@@ -86,7 +87,7 @@
                         <div class="restaurant__photo">
                             <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                                 alt="Une table à La note enchantée" title="Une table à La note enchantée">
-                            <button class="button__new">Nouveau</button>
+                            <div class="button__new">Nouveau</div>
                         </div>
                         <div class="restaurant__card-content">
                             <div >
@@ -94,7 +95,7 @@
                                 <p>Charonne</p>
                             </div>
                             <div class="restaurant__rate">
-                                <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                <span><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></span>
                             </div>
                         </div>
                     </article>
@@ -111,7 +112,7 @@
                                 <p>Cité Rouge</p>
                             </div>
                             <div class="restaurant__rate">
-                                <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                <span><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></span>
                             </div>
                         </div>
                     </article>
@@ -128,7 +129,7 @@
                                 <p>Folie-Méricourt</p>
                             </div>
                             <div class="restaurant__rate">
-                                <button><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></button>
+                                <span><i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i></span>
                             </div>
                         </div>
                     </article>
