--- a/restaurants/menu_delice_des_sens-test2.html
+++ b/restaurants/menu_delice_des_sens-test2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <title>Ohmyfood - La note enchantée</title>
+    <title>Ohmyfood - Le délice des Sens</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,14 +27,14 @@
     <main class="restaurant">
       <div class="restaurant__photo">
         <img
-          src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-          alt="Une assiette à La note enchantée"
-          title="Une assiette à La note enchantée"
+          src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          alt="Une assiette au Délice des sens"
+          title="Une assiette au Délice des sens"
         />
       </div>
       <div class="restaurant__menu">
         <div class="restaurant__info">
-          <h1>La note enchantée</h1>
+          <h1>Le délice des sens</h1>
           <div class="restaurant__rate">
             <span>
               <i class="fa-regular fa-heart"></i
@@ -43,11 +43,17 @@
           </div>
         </div>
         <div class="nav--tab">
-          <!--    <div class="navigation"> -->
-          <button class="chevron left">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <!--      </div> -->
+          <div class="navigation">
+            <button class="recipes_button entries">
+              <h2>Entrées</h2>
+            </button>
+            <button class="recipes_button maincourse">
+              <h2>Plats</h2>
+            </button>
+            <button class="recipes_button desserts">
+              <h2>Desserts</h2>
+            </button>
+          </div>
           <div class="menu__container">
             <div class="menu__container--extend">
               <div class="recipes">
@@ -56,8 +62,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Ravioles de foie gras </h3>
-                      <p>Accompagnées de leur crème à la truffe</p>
+                      <h3>Tartare de thon</h3>
+                      <p>Assaisonné au Yuzu</p>
                     </div>
                     <div class="recipes__price">25€</div>
                     <div class="recipes__selected">
@@ -68,8 +74,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Caviar osciètre </h3>
-                      <p>Sur blini à la farine de blé noir</p>
+                      <h3>Bouchée de homard croustillant</h3>
+                      <p>Et sa farandole de petits légumes</p>
                     </div>
                     <div class="recipes__price">35€</div>
                     <div class="recipes__selected">
@@ -80,22 +86,10 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Homard et espuma de potiron</h3>
-                      <p>Marinés aux zestes d'orange</p>
+                      <h3>Velouté de cèpes</h3>
+                      <p>Aux truffes</p>
                     </div>
                     <div class="recipes__price">20€</div>
-                    <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
-                    </div>
-                  </div>
-                </div>
-                <div class="recipes__choice">
-                  <div class="recipes__choice--extend">
-                    <div class="recipes__text">
-                      <h3>Foie gras de canard cuit entier</h3>
-                      <p>Confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="recipes__price">35€</div>
                     <div class="recipes__selected">
                       <i class="fa-solid fa-check"></i>
                     </div>
@@ -108,8 +102,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Noix de coquilles Saint-Jacques</h3>
-                      <p>Sur lit de purée de céleri-rave</p>
+                      <h3>Poulet rôti aux herbes de Provence</h3>
+                      <p>Et sa crème de truffe</p>
                     </div>
                     <div class="recipes__price">40€</div>
                     <div class="recipes__selected">
@@ -120,8 +114,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Langoustine poêlée</h3>
-                      <p>Purée de patate douce</p>
+                      <h3>Langouste rôtie</h3>
+                      <p>Et ses légumes de saison</p>
                     </div>
                     <div class="recipes__price">35€</div>
                     <div class="recipes__selected">
@@ -132,8 +126,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Mijoté de queue de bœuf </h3>
-                      <p>Et riz sauvage aux zestes de citron</p>
+                      <h3>Côte de bœuf Angus</h3>
+                      <p>Et sa purée de panais</p>
                     </div>
                     <div class="recipes__price">44€</div>
                     <div class="recipes__selected">
@@ -148,8 +142,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Macaron noisette et chocolat</h3>
-                      <p>Glace au caramel brun et sel de Guérande</p>
+                      <h3>Farandole de desserts</h3>
+                      <p>Du chef</p>
                     </div>
                     <div class="recipes__price">18€</div>
                     <div class="recipes__selected">
@@ -160,8 +154,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Baba au rhum revisité</h3>
-                      <p>Avec son coulis de citron</p>
+                      <h3>Crème brulée</h3>
+                      <p>Revisitée</p>
                     </div>
                     <div class="recipes__price">22€</div>
                     <div class="recipes__selected">
@@ -172,8 +166,8 @@
                 <div class="recipes__choice">
                   <div class="recipes__choice--extend">
                     <div class="recipes__text">
-                      <h3>Tarte au citron meringuée </h3>
-                      <p>Déstructurée</p>
+                      <h3>Tiramisu</h3>
+                      <p>À la noisette</p>
                     </div>
                     <div class="recipes__price">23€</div>
                     <div class="recipes__selected">
@@ -184,9 +178,6 @@
               </div>
             </div>
           </div>
-          <button class="chevron right">
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
         </div>
         <a href="#"><button class="button__gradient">Commander</button></a>
       </div>
