--- a/restaurants/menu_la_francaise.html
+++ b/restaurants/menu_la_francaise.html
@@ -190,7 +190,7 @@
             ><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a
           >
           <a href="#">Mentions légales</a>
-          <a href="#">Contact</a>
+          <a href="mailto:#">Contact</a>
         </div>
       </div>
     </footer>
