--- a/restaurants/menu_la_francaise.html
+++ b/restaurants/menu_la_francaise.html
@@ -42,14 +42,7 @@
             </span>
           </div>
         </div>
-        <div class="nav--tab">
-          <!--    <div class="navigation"> -->
-          <button class="chevron left">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <!--      </div> -->
           <div class="menu__container">
-            <div class="menu__container--extend">
               <div class="recipes">
                 <h2>Entrées</h2>
                 <div class="recipes__stylebar"></div>
@@ -61,7 +54,7 @@
                     </div>
                     <div class="recipes__price">25€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -73,7 +66,7 @@
                     </div>
                     <div class="recipes__price">35€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -85,7 +78,7 @@
                     </div>
                     <div class="recipes__price">20€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -101,7 +94,7 @@
                     </div>
                     <div class="recipes__price">40€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -113,7 +106,7 @@
                     </div>
                     <div class="recipes__price">35€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -125,7 +118,7 @@
                     </div>
                     <div class="recipes__price">44€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -141,7 +134,7 @@
                     </div>
                     <div class="recipes__price">18€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -153,7 +146,7 @@
                     </div>
                     <div class="recipes__price">22€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
@@ -165,17 +158,13 @@
                     </div>
                     <div class="recipes__price">23€</div>
                     <div class="recipes__selected">
-                      <i class="fa-solid fa-check"></i>
+                      <i class="fa-solid fa-circle-check"></i></i>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <button class="chevron right">
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
-        </div>
         <a href="#"><button class="button__gradient">Commander</button></a>
       </div>
     </main>
