Animation du menu en cours
Pb avec nth-child sur les recipes__choice qui semble ne pas fonctionner

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                 <div class="restaurant__rate">
                   <span
                     ><i class="fa-regular fa-heart"></i
-                    ><i class="fa-solid fa-heart"></i
+                    >
+                    <i class="fa-solid fa-heart"></i
                   ></span>
                 </div>
               </div>
