animation menu maj
animation menu

--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -32,43 +32,45 @@
         <div class="recipes">
           <h2>Entrées</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
-            <div class="recipes__choice--extend">
-              <div class="recipes__text">
-                <h3>Tartare de thon</h3>
-                <p>Assaisonné au Yuzu</p>
+            <div class="Entrées">
+              <div class="recipes__choice">
+                <div class="recipes__choice--extend">
+                  <div class="recipes__text">
+                    <h3>Tartare de thon</h3>
+                    <p>Assaisonné au Yuzu</p>
+                  </div>
+                  <div class="recipes__price">25€</div>
+                  <div class="recipes__selected">
+                    <i class="fa-solid fa-circle-check"></i></i>
+                  </div>
+                </div>
               </div>
-              <div class="recipes__price">25€</div>
-              <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
+              <div class="recipes__choice">
+                <div class="recipes__choice--extend">
+                  <div class="recipes__text">
+                    <h3>Bouchée de homard croustillant</h3>
+                    <p>Et sa farandole de petits légumes</p>
+                  </div>
+                  <div class="recipes__price">35€</div>
+                  <div class="recipes__selected">
+                    <i class="fa-solid fa-circle-check"></i></i>
+                  </div>
+                </div>
+              </div>
+              <div class="recipes__choice">
+                <div class="recipes__choice--extend">
+                  <div class="recipes__text">
+                    <h3>Velouté de cèpes</h3>
+                    <p>Aux truffes</p>
+                  </div>
+                  <div class="recipes__price">20€</div>
+                  <div class="recipes__selected">
+                    <i class="fa-solid fa-circle-check"></i></i>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
-            <div class="recipes__choice--extend">
-              <div class="recipes__text">
-                <h3>Bouchée de homard croustillant</h3>
-                <p>Et sa farandole de petits légumes</p>
-              </div>
-              <div class="recipes__price">35€</div>
-              <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
-              </div>
-            </div>
-          </div>
-          <div class="recipes__choice">
-            <div class="recipes__choice--extend">
-              <div class="recipes__text">
-                <h3>Velouté de cèpes</h3>
-                <p>Aux truffes</p>
-              </div>
-              <div class="recipes__price">20€</div>
-              <div class="recipes__selected">
-                <i class="fa-solid fa-circle-check"></i></i>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="recipes">
           <h2>Plats</h2>
           <div class="recipes__stylebar"></div>
