--- a/restaurants/menu_delice_des_sens.html
+++ b/restaurants/menu_delice_des_sens.html
@@ -25,56 +25,58 @@
     <div class="restaurant__menu">
       <div class="restaurant__info">
         <h1>Le délice des sens</h1>
-          <button class="restaurant__rate2"><i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-heart"></i></button>
+        <button class="restaurant__rate2">
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-solid fa-heart"></i>
+        </button>
       </div>
       <div class="menu__container">
         <div class="recipes">
           <h2>Entrées</h2>
           <div class="recipes__stylebar"></div>
-            <div class="Entrées">
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Tartare de thon</h3>
-                    <p>Assaisonné au Yuzu</p>
-                  </div>
-                  <div class="recipes__price">25€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
+          <div class="recipes__choice first-choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Tartare de thon</h3>
+                <p>Assaisonné au Yuzu</p>
               </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Bouchée de homard croustillant</h3>
-                    <p>Et sa farandole de petits légumes</p>
-                  </div>
-                  <div class="recipes__price">35€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
-              </div>
-              <div class="recipes__choice">
-                <div class="recipes__choice--extend">
-                  <div class="recipes__text">
-                    <h3>Velouté de cèpes</h3>
-                    <p>Aux truffes</p>
-                  </div>
-                  <div class="recipes__price">20€</div>
-                  <div class="recipes__selected">
-                    <i class="fa-solid fa-circle-check"></i></i>
-                  </div>
-                </div>
+              <div class="recipes__price">25€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
               </div>
             </div>
           </div>
+          <div class="recipes__choice secund-choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Bouchée de homard croustillant</h3>
+                <p>Et sa farandole de petits légumes</p>
+              </div>
+              <div class="recipes__price">35€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+          <div class="recipes__choice third-choice">
+            <div class="recipes__choice--extend">
+              <div class="recipes__text">
+                <h3>Velouté de cèpes</h3>
+                <p>Aux truffes</p>
+              </div>
+              <div class="recipes__price">20€</div>
+              <div class="recipes__selected">
+                <i class="fa-solid fa-circle-check"></i></i>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="recipes">
-          <h2>Plats</h2>
-          <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div>
+            <h2>Plats</h2>
+            <div class="recipes__stylebar"></div>
+          </div>
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Poulet rôti aux herbes de Provence</h3>
@@ -86,7 +88,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Langouste rôtie</h3>
@@ -98,7 +100,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Côte de bœuf Angus</h3>
@@ -112,9 +114,11 @@
           </div>
         </div>
         <div class="recipes">
-          <h2>Desserts</h2>
-          <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div>
+            <h2>Desserts</h2>
+            <div class="recipes__stylebar"></div>
+          </div>
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Farandole de desserts</h3>
@@ -126,7 +130,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Crème brulée</h3>
@@ -138,7 +142,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Tiramisu</h3>
