--- a/restaurants/menu_palette_du_gout.html
+++ b/restaurants/menu_palette_du_gout.html
@@ -25,18 +25,17 @@
     <div class="restaurant__menu">
       <div class="restaurant__info">
         <h1>La palette du goût</h1>
-        <div class="restaurant__rate">
-          <span>
-            <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
-          </span>
-        </div>
+        <button class="restaurant__rate2">
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-solid fa-heart"></i>
+        </button>
       </div>
 
       <div class="menu__container">
         <div class="recipes">
           <h2>Entrées</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Fricassée d'escargots</h3>
@@ -48,7 +47,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Foie gras de canard mi-cuit</h3>
@@ -60,7 +59,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Œuf au plat</h3>
@@ -76,7 +75,7 @@
         <div class="recipes">
           <h2>Plats</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Filet de bœuf aux herbes</h3>
@@ -88,7 +87,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Parmentier de queue de bœuf</h3>
@@ -100,7 +99,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Filet de turbot</h3>
@@ -116,7 +115,7 @@
         <div class="recipes">
           <h2>Desserts</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Paris-Brest</h3>
@@ -128,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Macaron au chocolat d'exception</h3>
@@ -140,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Mousse au chocolat</h3>
