--- a/restaurants/menu_la_francaise.html
+++ b/restaurants/menu_la_francaise.html
@@ -25,17 +25,16 @@
     <div class="restaurant__menu">
       <div class="restaurant__info">
         <h1>A la Française</h1>
-        <div class="restaurant__rate">
-          <span>
-            <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
-          </span>
-        </div>
+        <button class="restaurant__rate2">
+          <i class="fa-regular fa-heart"></i>            
+          <i class="fa-solid fa-heart"></i>
+        </button>
       </div>
       <div class="menu__container">
         <div class="recipes">
           <h2>Entrées</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Tartare de poulpe acidulé</h3>
@@ -47,7 +46,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Velouté de légumes d'antan</h3>
@@ -59,7 +58,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Soupe à l'oignon</h3>
@@ -75,7 +74,7 @@
         <div class="recipes">
           <h2>Plats</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Coquilles Saint-Jacques</h3>
@@ -87,7 +86,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Magret de canard</h3>
@@ -99,7 +98,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Pigeonneau d’Ille-et-Vilaine</h3>
@@ -115,7 +114,7 @@
         <div class="recipes">
           <h2>Desserts</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Pétales de violettes glacés</h3>
@@ -127,7 +126,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Fondant au chocolat</h3>
@@ -139,7 +138,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Millefeuille croustillant</h3>
