--- a/restaurants/menu_note_enchantee.html
+++ b/restaurants/menu_note_enchantee.html
@@ -25,17 +25,16 @@
     <div class="restaurant__menu">
       <div class="restaurant__info">
         <h1>La note enchantée</h1>
-        <div class="restaurant__rate">
-          <span>
-            <i class="fa-regular fa-heart"></i><i class="fa-solid fa-heart"></i>
-          </span>
-        </div>
+        <button class="restaurant__rate2">
+          <i class="fa-regular fa-heart"></i>
+          <i class="fa-solid fa-heart">
+        </i></button>
       </div>
       <div class="menu__container">
         <div class="recipes">
           <h2>Entrées</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Ravioles de foie gras</h3>
@@ -47,7 +46,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Caviar osciètre</h3>
@@ -59,7 +58,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Homard et espuma de potiron</h3>
@@ -71,7 +70,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice fourth-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Foie gras de canard cuit entier</h3>
@@ -87,7 +86,7 @@
         <div class="recipes">
           <h2>Plats</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Noix de coquilles Saint-Jacques</h3>
@@ -99,7 +98,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Langoustine poêlée</h3>
@@ -111,7 +110,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Mijoté de queue de bœuf</h3>
@@ -127,7 +126,7 @@
         <div class="recipes">
           <h2>Desserts</h2>
           <div class="recipes__stylebar"></div>
-          <div class="recipes__choice">
+          <div class="recipes__choice first-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Macaron noisette et chocolat</h3>
@@ -139,7 +138,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice secund-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Baba au rhum revisité</h3>
@@ -151,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="recipes__choice">
+          <div class="recipes__choice third-choice">
             <div class="recipes__choice--extend">
               <div class="recipes__text">
                 <h3>Tarte au citron meringuée</h3>
